Fix image spacing

--- a/css/main.css
+++ b/css/main.css
@@ -44,5 +44,5 @@ a:hover {
 }
 
 h1 {
-  display: inline-block;
+  display: block;
 }
